add choices to grid and change colour on click

--- a/analytics/src/components/main-choice-component/main-choice-component.css
+++ b/analytics/src/components/main-choice-component/main-choice-component.css
@@ -1,3 +1,13 @@
 :host {
   display: block;
 }
+
+.choice-list{
+  display: grid;
+  grid-template-columns: auto auto;
+
+}
+
+.choice-card{
+  padding: 10px;
+}
